--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </section>
 
     <section id="contact" class="contact">
-      <h2 class="contact__title">Contacto</h2>
+      <h2 class="contact__title">Contact</h2>
     </section>
   </main>
 
