--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </section>
       
-    <section id="about" class="about">
+    <section id="about" class="about grid">
       <div class="about__content">
         <h2 class="about__title"> Acerca de mí</h2>
         <p class="about__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quo distinctio, unde eveniet quos neque repellat ducimus animi, atque assumenda quam cum vitae consequuntur! Sed impedit minima molestiae nemo atque.</p>
