--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <img src="./assets/img/amazon.svg" alt="Amazon">
           </div>
           <div class="experience__description">
-            <p><span>Amazon</span><br>Senior UX/UI <br>2022</p>
+            <p><span>Amazon</span><br>Jr UX/UI <br>2022</p>
           </div>
           <div class="years">
             <p>1 año</p>
@@ -139,23 +139,22 @@
 
     <section id="projects" class="projects">
 
-      <h2>Mi Portafolio</h2>
-      
+      <h2 class="project__title">Mis Proyectos</h2>
       <div class="project__content">
         <div class="project">
-          <div class="project__container">
+          <div class="project1__container">
             <img src="./assets/img/image1.jpg" alt="Proyecto 1">
           </div>
         </div>
 
         <div class="project">
-          <div class="project__container">
+          <div class="project2__container">
             <img src="./assets/img/image2.jpg" alt="Proyecto 2">
           </div>
         </div>
 
         <div class="project">
-          <div class="project__container">
+          <div class="project3__container">
             <img src="./assets/img/image3.jpg" alt="Proyecto 3">
           </div>
         </div>
@@ -202,9 +201,9 @@
             <a href="mailto:nicolaspantojadi@gmail.com?Subject=Interesado%20en%20:%20"><img src="./assets/img/mail.svg" alt="Correo electrónico">
               <p><span>Email</span><br>Contactar por email</p>
             </a>
-            
           </div>
         </div>
+
       </div>
 
       </div>
