--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="menu" class="menu">
         <i class='bx bx-x menu__icon menu--close'></i>
         <nav class="menu__list">
-          <a class="menu__link" href="#">🏡</a>
+          <a class="menu__link" href="#" style="font-size: 2rem;">🏡</a>
           <a class="menu__link" href="#about">Acerca de mí</a>
           <a class="menu__link" href="#experience">Experiencia</a>
           <a class="menu__link" href="#projects">Mis Proyectos</a>
