--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
             <p><span>Academlo </span><br> 2022</p>
           </div>
 
+          <div class="about__download">
+            <a download="CV-Nicolas" href="./assets/archives/CV - Nicolas Pantoja Diaz-1.pdf"><img class="cv_download" src="./assets/img/cv_logo.png" alt="Curriculum Vitæ"></a>
+            <h2 class="download_title">Descargar CV</h2>
+          </div>
           <!-- <div class="item1">
             <img src="./assets/img/image_9.jpg" alt="UVL">
             <p><span>UVM </span><br> 2011 - 2016</p> 
@@ -100,8 +104,7 @@
 
         <div class="experience1">
           <div class="skills__image">
-            <img src="./assets/img/logoKoaj.svg" alt="KOAJ - INVECO"
-              d="M -52.967 -181.277 L -52.967 -110.239 L -17.236 -110.239 C 2.499 -110.239 18.496 -126.141 18.496 -145.757 L 18.496 -145.758 C 18.496 -165.375 2.499 -181.277 -17.236 -181.277 L -52.967 -181.277 Z">
+            <img src="./assets/img/logoKoaj.svg" alt="KOAJ - INVECO" width=32px">
           </div>
           <div class="experience__description">
             <p><span>KOAJ</span><br>Gerente Zona<br>2016 - 2022</p>
