--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="home__info flex">
           <h2 class="home__name"><span class="home__name-span">Nicolás</span> <span class="home__name-span">Pantoja</span></h2>
-          <p class="home__description">Desarollador Web Full Stack con conocimientos en Front-End: HTML5, CSS3, REACTJS
+          <p class="home__description">Desarrollador Web Full Stack con conocimientos en Front-End: HTML5, CSS3, REACTJS
           </p>
         </div>
 
@@ -76,7 +76,7 @@
             Apasionado por construir soluciones excepcionales
             que vivan en la web. Tengo experiencia como asesor y gerente donde he desarollado habilidades para dar
             soluciones óptimas de problemas, las cuales teniendo un grupo unido y trabajando en conjunto, además de un
-            buen control de zona en temas como logistica y manejo de clientes, lograba resolver con la mayor disposición
+            buen control de zona en temas como logistica y manejo de clientes, logré resolver con la mayor disposición
             y de la mejor manera. Soy un apasionado por
             la música y la moda, lo cuál me inspira para poder ser creativo y minusioso, algo que lo puedo demostrar en
             mis proyectos.
@@ -119,20 +119,20 @@
                 cumplimiento en merchandising</li>
               <li class="experience_list-items"><span class="experience_span">Trabajo en equipo: </span>Desarrollo de
                 labores y presentación en conjunto</li>
-              <li class="experience_list-items"><span class="experience_span">Cumplimiento: </span>Control de metas
-                propuestas y posicionamiento destacado de zona a nivel
-                nacional</li>
+                <li class="experience_list-items"><span class="experience_span">Comunicación: </span>Muy buena
+                  presentación y
+                  descripciones de producto. Unión entre equipo</li>
             </ul>
 
             <ul class="experience_list">
-              <li class="experience_list-items"><span class="experience_span">Comunicación: </span>Muy buena
-                presentacióny
-                descripciones de producto. Unión entre equipo</li>
               <li class="experience_list-items"><span class="experience_span">Resolución de problemas: </span>Rápida
                 actuación ante emergencías, consultar fuentes de
                 información para saber actuar.</li>
               <li class="experience_list-items"><span class="experience_span">Liderazgo: </span>Acompañamiento en todos
                 los sectores, trabajo de la mano.</li>
+              <li class="experience_list-items"><span class="experience_span">Cumplimiento: </span>Control de metas
+                propuestas y posicionamiento destacado de zona a nivel
+                nacional</li>
             </ul>
           </div>
         </div>
@@ -189,7 +189,7 @@
             <img src="" alt="">
             <img src="/assets/img/imgProjects/project4.jpg" alt="Proyecto CRUD">
             <div class="project_info">
-              <a href="https://github.com/Nicccccolas/crud-users" target="_blank">
+              <a href="https://crudusers-nicolas.netlify.app/" target="_blank">
                 <h3 class="project_name">CRUD Users</h3>
               </a>
               <ul class="project_list">
